# smartcalc

./: README.md  smartcalc.vsdx
src/: CMakeLists.txt  Makefile  main.cpp  mainpage.dox
src/Controller/: CMakeLists.txt
src/Controller/include/: controller.h
src/Controller/source/: controller.cpp
src/Model/: CMakeLists.txt  Makefile  parser.c  smart_calc.c  smart_calc.h
src/Model/include/: calculator.h  lexeme.h  model.h
src/Model/source/: calculator.cpp  lexeme.cpp  model.cpp
src/Model/test/: test.cc
src/View/: CMakeLists.txt
src/View/form/: mainwindow.ui  view.ui
src/View/include/: view.h
src/View/source/: main.cpp  qcustomplot.cpp  view.cpp
src/buildRelease/: CMakeCache.txt  Makefile  cmake_install.cmake  s21_SmartCalculator
src/buildRelease/s21_SmartCalculator_autogen/: mocs_compilation.cpp
src/buildRelease/s21_SmartCalculator_autogen/EWIEGA46WW/: moc_qcustomplot.cpp.d
src/buildRelease/s21_SmartCalculator_autogen/ZJOKMXDKB7/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
src/buildRelease/s21_SmartCalculator_autogen/include/: ui_mainwindow.h
src/dependencies/: CMakeLists.txt
src/lib/Model/: parser.c  parser.cpp  parser.h  smart_calc.c  smart_calc.h  stack.c  stack.h
